# yyr4-linux-control

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
docs/: action-execution-engine.md  action-model.md  architecture.md  control-action-configuration.md  current-hardware-mapping.md  daemon-runtime.md  development-governance.md  device-discovery.md  device-research.md  editor-authentication-and-sessions.md  event-audit.md  graphical-configurator.md  layered-configuration.md  linux-integration.md  local-graphical-editor.md  management-cli.md  observation-pipeline.md  product-vision.md  profile-library.md  project-charter.md  real-device-validation.md  roadmap.md  runtime-context-switching.md  security.md  transport-profile.md  use-cases.md  validation-ledger.md  vibe-coding-approvals.md  web-ui.md
examples/: yyr4-control-from-20260711-backup.toml  yyr4-control-v2.toml  yyr4-control.toml
system/: 99-yyr4.rules  yyr4d.service
tests/: editor_subprocess_test_support.py  fakes.py  test_bomb_real_device_access.py  test_codebook.py  test_configurator_action_spec.py  test_configurator_diff.py  test_configurator_draft_cli.py  test_configurator_edit.py  test_configurator_save.py  test_configurator_serializer.py  test_configurator_sidecar.py  test_configurator_view_model.py  test_configurator_writer.py  test_control_actions.py  test_control_config.py  test_control_config_runtime_actions.py  test_control_models.py  test_current_hardware_mapping_migration.py  test_daemon_cli.py  test_daemon_context.py  test_daemon_layered_compatibility.py  test_daemon_queue.py  (+58 more)
(+86 files in other folders)
