[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yyr4-linux-control"
version = "0.1.0.dev0"
description = "A professional, context-aware Linux control surface platform for the YYR4 programmable keypad."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT License"}
dependencies = []

[project.scripts]
yyr4-identity-permission-probe = "yyr4_linux_control.tools.identity_permission_probe:main"

[project.optional-dependencies]
linux-input = [
    "evdev",
    "pyudev",
]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["yyr4_linux_control*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
strict = true
